Closed Bug 1740284 Opened 3 years ago Closed 2 years ago

Missing Unlock in WebGPUParent::RecvSwapChainPresent()

Categories

(Core :: Graphics: WebGPU, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: jesup, Assigned: kvark)

Details

Attachments

(1 file, 1 obsolete file)

There's a missing Unlock() in WebGPUParent::RecvSwapChainPresent(), when it calls ForwardError() and then returns IPC_OK(). (Note another method in the same file avoids this problem in the same code pattern.)

The root cause of this is probably using raw Lock/Unlock's, and not using MutexAutoLock, which would work just fine in all the places we lock in this file.

Flags: needinfo?(dmalyshau)

Thank you for finding this out!

Assignee: nobody → dmalyshau
Severity: -- → S3
Flags: needinfo?(dmalyshau)

Is this patch attached to the correct bug? This is about a missing Unlock...

Flags: needinfo?(dmalyshau)
Attachment #9251258 - Attachment description: WIP: Bug 1740284 properly serialize mUseWebGPU → Bug 1740284 properly serialize mUseWebGPU

Comment on attachment 9251258 [details]
Bug 1740284 properly serialize mUseWebGPU

Revision D131448 was moved to bug 1740165. Setting attachment 9251258 [details] to obsolete.

Attachment #9251258 - Attachment is obsolete: true

Randell, thanks for spotting this! I had 2 bugs open and pasted the wrong number :)

Flags: needinfo?(dmalyshau)

MutexAutoLock could work but we actually want to unlock earlier than the end of scope. So using MutexAutoLock would require introduction of an artificial scope, at which point it becomes closer to explicit unlocking.

Attachment #9251368 - Attachment description: WIP: Bug 1740284 - WebGPU: unlock presentation buffers on error → Bug 1740284 - WebGPU: unlock presentation buffers on error
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b20d2b6b8800
WebGPU: unlock presentation buffers on error r=jimb
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: