Bug 1740284 - WebGPU: unlock presentation buffers on error r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D131501